--- a/Klike/Sources/Controllers/KLEventPaymentFreeCell.xib
+++ b/Klike/Sources/Controllers/KLEventPaymentFreeCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="KLEventPaymentCell" id="juh-8K-POd" customClass="KLEventPaymentCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="KLEventPaymentFreeCell" id="juh-8K-POd" customClass="KLEventPaymentFreeCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="juh-8K-POd" id="tmp-tN-lub">
