progress in priv policy, push settings and earn cell

--- a/Klike/Sources/Controllers/PrivacyPolicy/KLPrivacyPolicyViewController.xib
+++ b/Klike/Sources/Controllers/PrivacyPolicy/KLPrivacyPolicyViewController.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLPrivacyPolicyViewController">
             <connections>
+                <outlet property="_webView" destination="T9s-oa-WgF" id="2n2-9v-VYR"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -13,7 +14,19 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T9s-oa-WgF">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </webView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="T9s-oa-WgF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="9kY-0c-N8D"/>
+                <constraint firstAttribute="trailing" secondItem="T9s-oa-WgF" secondAttribute="trailing" id="VBi-0r-6Gq"/>
+                <constraint firstItem="T9s-oa-WgF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mlE-qb-TbD"/>
+                <constraint firstAttribute="bottom" secondItem="T9s-oa-WgF" secondAttribute="bottom" id="xBG-YI-w4V"/>
+            </constraints>
         </view>
     </objects>
 </document>
