--- a/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
@@ -6,13 +6,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KLEventPaymentInfoPageCell" id="HZn-E6-lVa" customClass="KLEventPaymentInfoPageCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KLEventPaymentInfoPageCell" rowHeight="45" id="HZn-E6-lVa" customClass="KLEventPaymentInfoPageCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HZn-E6-lVa" id="HJ8-cJ-d3I">
                 <autoresizingMask key="autoresizingMask"/>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="181" y="278"/>
+            <point key="canvasLocation" x="181" y="278.5"/>
         </tableViewCell>
     </objects>
 </document>
