--- a/Klike/Interfaces/SettingsHeaderView.xib
+++ b/Klike/Interfaces/SettingsHeaderView.xib
@@ -32,6 +32,7 @@
                         <constraint firstAttribute="height" constant="53" id="8wl-jp-pU7"/>
                         <constraint firstAttribute="width" constant="57" id="Iwy-f2-6ro"/>
                     </constraints>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <state key="normal" image="ic_cam">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -53,6 +54,7 @@
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ZW-JA-4ou">
                     <rect key="frame" x="132" y="51" width="56" height="56"/>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <state key="normal" image="ic_cam">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
