--- a/Klike/Sources/Controllers/KLLoginDetailsViewController.xib
+++ b/Klike/Sources/Controllers/KLLoginDetailsViewController.xib
@@ -36,6 +36,7 @@
                                 <constraint firstAttribute="width" constant="64" id="CnN-cl-faP"/>
                                 <constraint firstAttribute="height" constant="64" id="V2U-7z-dv1"/>
                             </constraints>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <state key="normal" image="ic_camera_trans">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
