--- a/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventPaymentInfoPageCell.xib
@@ -6,13 +6,106 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KLEventPaymentInfoPageCell" rowHeight="45" id="HZn-E6-lVa" customClass="KLEventPaymentInfoPageCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KLEventPaymentInfoPageCell" rowHeight="64" id="HZn-E6-lVa" customClass="KLEventPaymentInfoPageCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="229"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HZn-E6-lVa" id="HJ8-cJ-d3I">
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GRL-sC-lzq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="228"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Citibank XXXX-1234" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6TG-Dd-Djo">
+                                <rect key="frame" x="0.0" y="105" width="320" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Bvk-6D-zpa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.082352941176470587" green="0.72941176470588232" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z3k-fh-DL0">
+                                <rect key="frame" x="0.0" y="20" width="320" height="80"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="V8L-EB-NUp"/>
+                                </constraints>
+                            </view>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="MrK-y4-mGC">
+                                <rect key="frame" x="0.0" y="191" width="320" height="37"/>
+                            </pageControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="4Fb-YN-Za5">
+                                <rect key="frame" x="0.0" y="110" width="320" height="85"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="85" id="gIc-qg-Yax"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="day-Q0-fj0">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <connections>
+                                    <outlet property="dataSource" destination="HZn-E6-lVa" id="8vu-EJ-Cz1"/>
+                                    <outlet property="delegate" destination="HZn-E6-lVa" id="LMW-CK-nKL"/>
+                                </connections>
+                            </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J7o-Hc-dlN">
+                                <rect key="frame" x="270" y="0.0" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="jqa-7o-Y3r"/>
+                                    <constraint firstAttribute="width" constant="50" id="yL8-NY-Tr6"/>
+                                </constraints>
+                                <state key="normal" image="ic_close_throw_in">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onClose:" destination="HZn-E6-lVa" eventType="touchUpInside" id="gQI-dc-4UJ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="6TG-Dd-Djo" secondAttribute="trailing" id="3GK-FG-OgP"/>
+                            <constraint firstAttribute="height" constant="228" id="4jt-ep-Ucz"/>
+                            <constraint firstItem="Z3k-fh-DL0" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="A0o-TZ-jlj"/>
+                            <constraint firstItem="6TG-Dd-Djo" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="CZ2-WQ-97p"/>
+                            <constraint firstAttribute="trailing" secondItem="MrK-y4-mGC" secondAttribute="trailing" id="Fvx-Y6-4we"/>
+                            <constraint firstItem="6TG-Dd-Djo" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="105" id="K8j-r6-sN6"/>
+                            <constraint firstAttribute="bottom" secondItem="4Fb-YN-Za5" secondAttribute="bottom" constant="33" id="NMS-AP-aZs"/>
+                            <constraint firstAttribute="trailing" secondItem="Z3k-fh-DL0" secondAttribute="trailing" id="OBg-8M-liC"/>
+                            <constraint firstAttribute="trailing" secondItem="4Fb-YN-Za5" secondAttribute="trailing" id="S9m-wc-eeA"/>
+                            <constraint firstItem="Z3k-fh-DL0" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" constant="20" id="UZj-XP-F5t"/>
+                            <constraint firstItem="J7o-Hc-dlN" firstAttribute="top" secondItem="GRL-sC-lzq" secondAttribute="top" id="UhG-K4-0M7"/>
+                            <constraint firstItem="MrK-y4-mGC" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="hpj-ha-xoJ"/>
+                            <constraint firstItem="4Fb-YN-Za5" firstAttribute="leading" secondItem="GRL-sC-lzq" secondAttribute="leading" id="uTR-1G-bIU"/>
+                            <constraint firstAttribute="trailing" secondItem="J7o-Hc-dlN" secondAttribute="trailing" id="x7k-Qx-Z6k"/>
+                            <constraint firstAttribute="bottom" secondItem="MrK-y4-mGC" secondAttribute="bottom" id="x97-tW-xwn"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" red="0.011764705882352941" green="0.53333333333333333" blue="0.65098039215686276" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <constraints>
+                    <constraint firstItem="GRL-sC-lzq" firstAttribute="top" secondItem="HJ8-cJ-d3I" secondAttribute="top" id="Q4I-He-5S9"/>
+                    <constraint firstAttribute="trailing" secondItem="GRL-sC-lzq" secondAttribute="trailing" id="Z2g-VF-CTB"/>
+                    <constraint firstItem="GRL-sC-lzq" firstAttribute="leading" secondItem="HJ8-cJ-d3I" secondAttribute="leading" id="cae-uf-vWE"/>
+                    <constraint firstAttribute="bottom" secondItem="GRL-sC-lzq" secondAttribute="bottom" id="pPn-gj-3UV"/>
+                </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="181" y="278.5"/>
+            <connections>
+                <outlet property="_buttonClose" destination="J7o-Hc-dlN" id="lzh-uO-PpR"/>
+                <outlet property="_collectionCards" destination="4Fb-YN-Za5" id="duG-gR-vds"/>
+                <outlet property="_colletctionLayout" destination="day-Q0-fj0" id="nsi-A1-e0Y"/>
+                <outlet property="_constraintCellH" destination="4jt-ep-Ucz" id="ljh-c6-JTx"/>
+                <outlet property="_labelCardNumber" destination="6TG-Dd-Djo" id="1zI-km-FhP"/>
+                <outlet property="_pages" destination="MrK-y4-mGC" id="sg7-6H-u0E"/>
+                <outlet property="_viewInputContent" destination="Z3k-fh-DL0" id="fuW-lf-9fA"/>
+            </connections>
+            <point key="canvasLocation" x="181" y="287.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="ic_close_throw_in" width="16" height="16"/>
+    </resources>
 </document>
